--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <body>
         <style>
           div {
-              display: inline-block;
-              width: 100%;
+              display: table-cell;
               vertical-align: middle;
+              width: 100%;
               text-align: center;
               border: 10px dashed #1c87c9;
           }
 
           h1 {
               font-size: 300%;
+              vertical-align: middle;
           }
 
           button {
