--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1 style="text-align:center;">خوارزمية البحث الثنائي</h1>
         <div id = "dv">
             <h1 id = "guess">500000?</h1>
-            <h1 id = "count">عدد المحاولات: 0</h1>
+            <h1 id = "count">عدد التخمينات: 1</h1>
             <button onclick = "down()" class = "btn btn-success">كبير جداً</button>
             <button onclick = "reset()" class = "btn btn-warning">ممتاز</button>
             <button onclick = "up()" class = "btn btn-danger">صغير جداً</button>
